force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_IGA_Entity_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_IGA_Entity_Description__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It is the applicable intergovernmental agreement&apos;s (IGA&apos;s) term/description for the type of entity that includes the beneficial owner.</description>
    <inlineHelpText>The applicable intergovernmental agreement&apos;s (IGA&apos;s) term/description for the type of entity that includes the beneficial owner.</inlineHelpText>
    <label>Form W8 IGA Entity Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>