force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_Model_2_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_Model_2_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It is populated by a user or a data integration. The entity that is a &apos;Nonreporting IGA FFI&apos; is also treated as a registered deemed-compliant FFI under a &apos;Model 2&apos; IGA, as defined in Part XII of IRS form W-8BEN-E.</description>
    <inlineHelpText>The entity that is a &apos;Nonreporting IGA FFI&apos; is also treated as a registered deemed-compliant FFI under a &apos;Model 2&apos; IGA, as defined in Part XII of IRS form W-8BEN-E.</inlineHelpText>
    <label>Form W8 Model 2 Indicator</label>
    <type>Checkbox</type>
</CustomField>