force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_Owner_Type__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It specifies the type of owner (or &apos;Chapter 3 Status&apos;) that is listed on the applicable IRS Form W-8 (e.g., W-8BEN-E, Certificate of Foreign Status of Beneficial Owner - Entity). Note that for several types there are two options distinguishing between hybri...</description>
    <inlineHelpText>Specifies the type of owner (or &apos;Chapter 3 Status&apos;) that is listed on the applicable IRS Form W-8.</inlineHelpText>
    <label>Form W8 Owner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Disregarded Entity (non-hybrid)</fullName>
            </value>
            <value>
                <fullName>Partnership (non-hybrid)</fullName>
            </value>
            <value>
                <fullName>Simple Trust (non-hybrid)</fullName>
            </value>
            <value>
                <fullName>Grantor Trust (non-hybrid)</fullName>
            </value>
            <value>
                <fullName>Complex Trust</fullName>
            </value>
            <value>
                <fullName>Estate</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Central Bank of Issue</fullName>
            </value>
            <value>
                <fullName>Tax-exempt Organization</fullName>
            </value>
            <value>
                <fullName>Private Foundation</fullName>
            </value>
            <value>
                <fullName>Disregarded Entity (hybrid/treaty claim)</fullName>
            </value>
            <value>
                <fullName>Partnership (hybrid/treaty claim)</fullName>
            </value>
            <value>
                <fullName>Simple Trust (hybrid/treaty claim)</fullName>
            </value>
            <value>
                <fullName>Grantor Trust (hybrid/treaty claim)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>