force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_Reference_Number_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_Reference_Number_Description__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It describes any reference numbers that will be useful to the withholding agent while processing the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</description>
    <inlineHelpText>Describes any reference numbers that will be useful to the withholding agent while processing the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</inlineHelpText>
    <label>Form W8 Reference Number Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>