force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_Restricted_Distributor_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_Restricted_Distributor_Type__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It indicates the distribution agreement type for the Restricted Distributor, which must contain either (1) previous as well as current US sales prohibitions; or (2) only current US sales prohibitions coupled with preexisting account review, as the...</description>
    <inlineHelpText>Indicates type of distribution agreement type for the Restricted Distributor.</inlineHelpText>
    <label>Form W8 Restricted Distributor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Previous and Current US Sales Prohibition</fullName>
            </value>
            <value>
                <fullName>Current Prohibition Plus Preexisting Accounts Review Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>