force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_Security_Market_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_Security_Market_Name__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It contains the name of the securities market (or the name of one such securities market, if more than one) upon which the publicly-traded NFFE corporation&apos;s stock is regularly traded.</description>
    <inlineHelpText>The name of the securities market (or the name of one such securities market, if more than one) upon which the publicly-traded NFFE corporation&apos;s stock is regularly traded.</inlineHelpText>
    <label>Form W8 Security Market Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>