force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_Special_Claim_Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_Special_Claim_Rate__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It designates the percentage rate of withholding on the specific type of income on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</description>
    <inlineHelpText>The percentage rate of withholding on the specific type of income on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</inlineHelpText>
    <label>Form W8 Special Claim Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>