force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_Special_Claim_Reason__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_Special_Claim_Reason__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It describes the reason the owner meets the terms of the treaty article on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</description>
    <inlineHelpText>Describes the reason the owner meets the terms of the treaty article on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</inlineHelpText>
    <label>Form W8 Special Claim Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>