force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_Special_Income_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_Special_Income_Description__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It describes the type of income the owner is using to claim treaty benefits on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</description>
    <inlineHelpText>Describes the type of income the owner is using to claim treaty benefits on the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</inlineHelpText>
    <label>Form W8 Special Income Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>