force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_Sponsor_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_Sponsor_Entity_Name__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It designates the name of the sponsoring entity for the beneficial owner that is one of the following: (a) a sponsored Foreign Financial Institution (FII) without a GIIN number, OR (b) a certified deemed- compliant closely held investment vehicle, or (c) a sponsored direct reporting NFFE, as these entities are defined by IRS forms W-8.</description>
    <inlineHelpText>The name of the sponsoring entity for the beneficial owner, these entities are defined by IRS forms W-8.</inlineHelpText>
    <label>Form W8 Sponsor Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>