force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_Sponsored_FFI_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_Sponsored_FFI_Type__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. The beneficial owner is a sponsored Foreign Financial Institution (FII) without a GIIN number prior to 1/1/16 for purposes of IRS forms W-8 and certifies either (1) that it is an FFI only because it is an investment entity and has an agreement for sponsorship; or (2) that it is a controlled foreign corporation &apos;as defined by section 957(a).&apos;</description>
    <inlineHelpText>The beneficial owner is a sponsored Foreign Financial Institution (FII) without a GIIN number prior to 1/1/16 for purposes of IRS forms W-8</inlineHelpText>
    <label>Form W8 Sponsored FFI Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FFI Investment Entity</fullName>
            </value>
            <value>
                <fullName>FFI Foreign Section 957a Corporation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>