force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_Start_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_Start_Up_Date__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It designates the date the start-up company was formed (or date of board resolution approving the new line of business).</description>
    <inlineHelpText>The date the start-up company was formed (or date of board resolution approving the new line of business).</inlineHelpText>
    <label>Form W8 Start Up Date</label>
    <type>Date</type>
</CustomField>