force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_Treaty_Qualified_Resident_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_Treaty_Qualified_Resident_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It is populated by a user or a data integration. If true, the owner is not an individual claiming treaty benefits for dividends received from a foreign corporation or interest from a US trade or business of a foreign corporation and meets qualified resident status. It is form-specific for the W-8BEN (Certificate of Foreign Status of Beneficial Owner for United States Tax Withholding).</description>
    <inlineHelpText>If true the owner is not an individual is claiming treaty benefits for dividends.</inlineHelpText>
    <label>Form W8 Treaty Qualified Resident Status</label>
    <type>Checkbox</type>
</CustomField>