force-app/main/default/objects/Account/fields/LLC_BI__Form_W9_Seperat_TIN_Certification_Ind__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W9_Seperat_TIN_Certification_Ind__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It is populated by a user or a data integration. If true, a separate TIN certification (i.e. a W-9) is desired.</description>
    <inlineHelpText>If true a separate TIN certification (i.e. a W-9) is desired.</inlineHelpText>
    <label>Form W9 Seperat TIN Certification</label>
    <type>Checkbox</type>
</CustomField>