force-app/main/default/objects/Account/fields/LLC_BI__GIIN__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__GIIN__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. The GIIN of the disregarded entity account holder. (Global Intermediary Identification Number, a 19-digit number assigned to certain entities and used by a financial institution to identify itself to withholding agents and tax administrations for FATCA reporting.)</description>
    <inlineHelpText>The GIIN of the disregarded entity account holder. (Global Intermediary Identification Number.)</inlineHelpText>
    <label>GIIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>