force-app/main/default/objects/Account/fields/LLC_BI__Global_Cash_Flow__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Global_Cash_Flow__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It is used to demonstrate the owner&apos;s total monthly cash flow. Calculated automatically. Global CF = ((NOI) + (Spouse Salary if spouse is guarantor) + (Other Income)).</description>
    <label>Global Cash Flow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>