force-app/main/default/objects/Account/fields/LLC_BI__Governing_Law_State__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Governing_Law_State__c</fullName>
    <description>Governing Law State</description>
    <inlineHelpText>The governing law state of the trust.</inlineHelpText>
    <label>Governing Law State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Connecticut</fullName>
            </value>
            <value>
                <fullName>North Carolina</fullName>
            </value>
            <value>
                <fullName>North Dakota</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>