force-app/main/default/objects/Account/fields/LLC_BI__Highest_Risk_Grade__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Highest_Risk_Grade__c</fullName>
    <description>This field is optional. This field is manually populated. This field is used to store the highest decisioned risk grade of all loans where this relationship is an entity.</description>
    <inlineHelpText>This field is automatically filled with the highest risk grade loan associated to this account</inlineHelpText>
    <label>Risk Grade</label>
    <length>3</length>
    <type>Text</type>
</CustomField>