force-app/main/default/objects/Account/fields/LLC_BI__Institution__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manually populate this lookup field to define the Institution to which an account belongs.</description>
    <inlineHelpText>Manually populate this lookup field to define the Institution to which an account belongs.</inlineHelpText>
    <label>Institution</label>
    <referenceTo>LLC_BI__Institution__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>