force-app/main/default/objects/Account/fields/LLC_BI__Is_Individual__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Individual__c</fullName>
    <description>This field is a formula field that assists in specifying if the account is an individual account.</description>
    <formula>IF(OR(ISPICKVAL(Type, &apos;Sole Proprietorship&apos;),ISPICKVAL(Type, &apos;Individual&apos;)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Individual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>