force-app/main/default/objects/Account/fields/LLC_BI__Last_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Last_Review_Date__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It is the date of the last review.</description>
    <label>Last Review Date</label>
    <type>Date</type>
</CustomField>