force-app/main/default/objects/Account/fields/LLC_BI__Last_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Last_Site_Visit__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the date of last site visit to this Relationship or Account.</description>
    <label>Last Site Visit</label>
    <type>Date</type>
</CustomField>