force-app/main/default/objects/Account/fields/LLC_BI__Limited_Liability_Management_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Limited_Liability_Management_Type__c</fullName>
    <description>Users manually populate this optional text field. This field is used to specify whether the Limited Liability Company is operated by members or managers.</description>
    <label>Limited Liability Management Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member Managed</fullName>
            </value>
            <value>
                <fullName>Manager Managed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>