force-app/main/default/objects/Account/fields/LLC_BI__Loan_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Name__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field can be used to specify the loan name that is associated to the account.</description>
    <label>Loan Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>