force-app/main/default/objects/Account/fields/LLC_BI__Loan_Numbers__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Numbers__c</fullName>
    <description>This is a hidden field that stores the loan numbers that the relationship has. Used in some reports, alerts, etc. ( to be deprecated)</description>
    <label>-D Loan Numbers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>