force-app/main/default/objects/Account/fields/LLC_BI__Management_Experience__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Management_Experience__c</fullName>
    <description>This field is no longer used.</description>
    <inlineHelpText>Management Experience the individual has in their industry - expressed in Years.</inlineHelpText>
    <label>Management Experience</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>