force-app/main/default/objects/Account/fields/LLC_BI__Naics_Code__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Naics_Code__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This text field is used to capture the NAICS code for the relationship.</description>
    <label>NAICS Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>