force-app/main/default/objects/Account/fields/LLC_BI__NaicsDesc__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__NaicsDesc__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. NaicsDesc Description is utilized in lieu of the Data.com field.</description>
    <inlineHelpText>NaicsDesc Description utilized in lieu of Data.com field</inlineHelpText>
    <label>NaicsDesc</label>
    <length>120</length>
    <type>Text</type>
</CustomField>