force-app/main/default/objects/Account/fields/LLC_BI__Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Next_Review_Date__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It designates the date of the next required review.</description>
    <label>Next Review Date</label>
    <type>Date</type>
</CustomField>