force-app/main/default/objects/Account/fields/LLC_BI__Number_of_Signers__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Number_of_Signers__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the number of authorized signers related to this account/relationship.</description>
    <label>Number of Signers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>