force-app/main/default/objects/Account/fields/LLC_BI__NumberofLocations__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__NumberofLocations__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the number of locations for this Relationship or Account.</description>
    <label>Number of Locations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>