force-app/main/default/objects/Account/fields/LLC_BI__Personal_Fin_Statements__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Personal_Fin_Statements__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the date of most recent Personal Financial Statement on file.</description>
    <label>Personal Fin Statements</label>
    <type>Date</type>
</CustomField>