force-app/main/default/objects/Account/fields/LLC_BI__Personal_Tax_Return__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Personal_Tax_Return__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the date of the most recent Personal Tax Return (PTR).</description>
    <label>Personal Tax Return</label>
    <type>Date</type>
</CustomField>