force-app/main/default/objects/Account/fields/LLC_BI__Phone_Number_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Phone_Number_Type__c</fullName>
    <description>This field is not required and is manually populated. This field defines the type of phone number entered in the &quot;Phone&quot; field on the Account object.</description>
    <label>Phone Number Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>