force-app/main/default/objects/Account/fields/LLC_BI__Previous_Financial_Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Previous_Financial_Institution_Name__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It designates the name of the previous financial institution of the account holder.</description>
    <inlineHelpText>The name of the previous financial institution of the account holder.</inlineHelpText>
    <label>Previous Financial Institution Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>